; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_ldeleteproto.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_ldeleteproto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"Need a sproto object\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ldeleteproto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ldeleteproto(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.sproto*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call %struct.sproto* @lua_touserdata(i32* %5, i32 1)
  store %struct.sproto* %6, %struct.sproto** %4, align 8
  %7 = load %struct.sproto*, %struct.sproto** %4, align 8
  %8 = icmp eq %struct.sproto* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @luaL_argerror(i32* %10, i32 1, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i32 %11, i32* %2, align 4
  br label %15

12:                                               ; preds = %1
  %13 = load %struct.sproto*, %struct.sproto** %4, align 8
  %14 = call i32 @sproto_release(%struct.sproto* %13)
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local %struct.sproto* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @luaL_argerror(i32*, i32, i8*) #1

declare dso_local i32 @sproto_release(%struct.sproto*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
